--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="pricing-plan">
-            <img src="icons/icon2.png" alt="" class="pricing-img" width="300px">
+            <img src="icons/icon2.png" alt="" class="pricing-img">
             <h2 class="pricing-header">Small team</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Never sleeps</li>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="pricing-plan">
-            <img src="icons/icon3.png" alt="" class="pricing-img" width="300px">
+            <img src="icons/icon3.png" alt="" class="pricing-img">
             <h2 class="pricing-header">Enterprise</h2>
             <ul class="pricing-features">
                 <li class="pricing-features-item">Dedicated</li>
